--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
