--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^11.2.7
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_svg: ^2.0.7
   image_picker: ^1.0.4
 
@@ -56,6 +57,7 @@ flutter:
   assets:
     # - assets/pixtasy_icon.svg
     - assets/pixtasy.png
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
