--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     # - assets/pixtasy_icon.svg
-    - assets/pixtasy.png
+    - assets/
     - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
